--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords":["contao", "isotope"],
     "type": "composer-plugin",
     "license": "LGPL-3.0-or-later",
-    "version": "2.6.0",
+    "version": "2.6.1",
     "authors":[
         {
             "name": "Isotope Workgroup",
@@ -17,9 +17,9 @@
         "source": "https://github.com/isotope/demo"
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.2",
         "composer-plugin-api": "^1.1",
-        "contao/manager-bundle": "^4.4",
+        "contao/manager-bundle": "4.9.*",
         "isotope/isotope-core": "2.6.*",
         "terminal42/contao-easy_themes": "^2.2",
         "terminal42/contao-changelanguage": "^3.1"
